bugfix: spacing

--- a/src/assets/styles/message.css
+++ b/src/assets/styles/message.css
@@ -7,6 +7,8 @@
   padding-right: 10px;
   padding-top: 2px;
   padding-bottom: 2px;
+  margin-top: 4px;
+  margin-bottom: 4px;
 }
 .message > img {
   vertical-align: middle;
